--- a/index.html
+++ b/index.html
@@ -5,134 +5,108 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sajado – Speisekarte</title>
   <style>
-    /* ---------- Design Tokens ---------- */
     :root{
-      --bg: #ffffff;
-      --text: #111111;
-      --muted: #6b7280;
-      --border: #e5e7eb;
-      --card: #ffffff;
-      --shadow: 0 6px 22px rgba(0,0,0,.08);
-      --radius: 18px;
-      --gap: 18px;
-      --container: 1200px;
-      --accent: #b3261e;      /* warmes Rot – passend zum Logo */
-      --accent-weak: #fff1f0;  /* sehr helles Rot */
+      --bg:#ffffff;
+      --text:#111;
+      --muted:#6b7280;
+      --border:#e5e7eb;
+      --card:#fff;
+      --shadow:0 6px 22px rgba(0,0,0,.08);
+      --radius:18px;
+      --gap:18px;
+      --container:1200px;
+      --accent:#b3261e;
+      --accent-weak:#fff1f0;
     }
-    *{ box-sizing: border-box; }
-    html,body{ margin:0; background:var(--bg); color:var(--text); font-family: ui-sans-serif,-apple-system,Segoe UI,Roboto,Helvetica,Arial; line-height:1.5; }
+    *{box-sizing:border-box;}
+    html,body{margin:0;background:var(--bg);color:var(--text);font-family:ui-sans-serif,-apple-system,Segoe UI,Roboto,Helvetica,Arial;line-height:1.5;}
 
-    /* ---------- Header ---------- */
-    header{
-      position: sticky; top: 0; z-index: 40;
-      background: var(--bg);
-      border-bottom: 1px solid var(--border);
-      backdrop-filter: saturate(180%) blur(8px);
-    }
-    .container{ max-width: var(--container); margin: 0 auto; padding: 12px 18px; display:flex; align-items:center; gap:14px; }
-    .logo{ display:flex; align-items:center; gap:12px; }
-    .logo img{ height: 38px; width:auto; }
-    .logo h1{ font-size: 18px; margin:0; font-weight: 700; letter-spacing:.2px; }
+    /* Header */
+    header{position:sticky;top:0;z-index:40;background:var(--bg);border-bottom:1px solid var(--border);backdrop-filter:saturate(180%) blur(8px);}
+    .container{max-width:var(--container);margin:0 auto;padding:12px 18px;display:flex;align-items:center;gap:14px;}
+    .logo{display:flex;align-items:center;gap:12px;}
+    .logo img{height:38px;width:auto;}
+    .logo h1{font-size:18px;margin:0;font-weight:700;letter-spacing:.2px;}
+    .hamburger{width:38px;height:28px;display:flex;flex-direction:column;justify-content:space-between;cursor:pointer;}
+    .bar{height:3px;border-radius:3px;background:#111;}
+    main{max-width:var(--container);margin:0 auto;padding:18px;}
+    section{padding:28px 0;scroll-margin-top:84px;}
+    h2{margin:0 0 14px;font-size:24px;font-weight:800;letter-spacing:.2px;}
 
-    /* ---------- Hamburger ---------- */
-    .hamburger{ width: 38px; height: 28px; display:flex; flex-direction:column; justify-content:space-between; cursor:pointer; }
-    .bar{ height: 3px; border-radius: 3px; background: #111; transition: transform .2s ease, opacity .2s ease; }
-    .sidebar.open ~ header .bar:nth-child(1){ transform: translateY(10px) rotate(45deg); }
-    .sidebar.open ~ header .bar:nth-child(2){ opacity: 0; }
-    .sidebar.open ~ header .bar:nth-child(3){ transform: translateY(-10px) rotate(-45deg); }
-
-    main{ max-width: var(--container); margin: 0 auto; padding: 18px; }
-    section{ padding: 28px 0; scroll-margin-top: 84px; }
-    h2{ margin: 0 0 14px; font-size: 24px; font-weight: 800; letter-spacing:.2px; }
-
-    /* ---------- Card Grid ---------- */
+    /* Grid */
     .grid{
-      display: grid; gap: var(--gap);
-      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-      align-items: start;
+      display:grid;
+      gap:var(--gap);
+      grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
+      align-items:start;
     }
     .card{
-      background: var(--card);
-      border: 2px solid #f1f1f1;            /* dezenter Bilderrahmen */
-      border-radius: var(--radius);
-      overflow: hidden;
-      box-shadow: var(--shadow);
-      transition: transform .15s ease, box-shadow .15s ease, border-color .15s ease;
+      background:var(--card);
+      border:2px solid #f1f1f1;
+      border-radius:var(--radius);
+      overflow:hidden;
+      box-shadow:var(--shadow);
+      transition:transform .15s ease,box-shadow .15s ease,border-color .15s ease;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:10px;
     }
     .card:hover{
-      transform: translateY(-2px);
-      border-color: var(--accent-weak);
-      box-shadow: 0 10px 26px rgba(0,0,0,.10);
+      transform:translateY(-2px);
+      border-color:var(--accent-weak);
+      box-shadow:0 10px 26px rgba(0,0,0,.1);
     }
     .card img{
-      display:block; width:100%; height: 280px; object-fit: cover;
-      background: #f8f8f8;
+      display:block;
+      width:100%;
+      height:auto;
+      max-height:500px;
+      object-fit:contain;
+      background:#fff;
+      border-radius:12px;
     }
-
     .empty{
-      color: var(--muted);
-      background: #fafafa;
-      border: 1px dashed var(--border);
-      border-radius: 12px;
-      padding: 14px;
-      text-align: center;
-      grid-column: 1/-1;
+      color:var(--muted);
+      background:#fafafa;
+      border:1px dashed var(--border);
+      border-radius:12px;
+      padding:14px;
+      text-align:center;
+      grid-column:1/-1;
     }
 
-    /* ---------- Sidebar (schöner) ---------- */
-    .sidebar-backdrop{ position: fixed; inset:0; background: rgba(0,0,0,.35); display:none; z-index: 30; }
-    .sidebar{ position: fixed; inset:0 auto 0 0; width: 340px; max-width: 88vw;
-      background: #fff; border-right: 1px solid var(--border);
-      box-shadow: 10px 0 28px rgba(0,0,0,.06);
-      transform: translateX(-100%); transition: transform .22s ease; z-index: 50;
-      display:flex; flex-direction: column;
-    }
-    .sidebar.open{ transform: translateX(0); }
-    .open-backdrop{ display:block; }
-
-    .sidebar-header{
-      padding: 18px; border-bottom: 1px solid var(--border);
-      display:flex; align-items:center; gap: 12px;
-      background: linear-gradient(0deg, #fff 0%, #fff 45%, var(--accent-weak) 45%, var(--accent-weak) 100%);
-    }
-    .sidebar-header img{ height: 38px; }
-    .sidebar-header .brand{ font-weight:800; font-size:16px; letter-spacing:.3px; }
-
-    .cat-list{ padding: 12px; overflow: auto; }
-    .cat-list a{
-      display:block; padding: 12px 14px; margin: 6px 0;
-      text-decoration:none; color: #111;
-      border: 1px solid var(--border); border-radius: 12px;
-      background: #fff;
-      transition: background .15s ease, border-color .15s ease, color .15s ease;
-      font-weight: 600;
-    }
-    .cat-list a:hover{ background: var(--accent-weak); border-color: #ffd9d6; }
-    .cat-list a.active{ background: var(--accent); color:#fff; border-color: var(--accent); }
-
-    /* ---------- Footer ---------- */
-    .footer{ border-top:1px solid var(--border); padding: 26px 20px; text-align:center; color: var(--muted); }
-
-    @media (min-width: 1100px){
-      /* Auf großen Screens Sidebar dauerhaft zeigen (schönes, ruhiges Layout) */
-      .sidebar{ transform: translateX(0); position: sticky; top: 0; height: 100vh; }
-      .sidebar-backdrop{ display:none !important; }
-      body{ display:grid; grid-template-columns: 340px 1fr; }
-      header{ grid-column: 1 / -1; }
-      main{ padding-left: 24px; }
-      .hamburger{ display:none; }
+    /* Sidebar */
+    .sidebar-backdrop{position:fixed;inset:0;background:rgba(0,0,0,.35);display:none;z-index:30;}
+    .sidebar{position:fixed;inset:0 auto 0 0;width:340px;max-width:88vw;background:#fff;border-right:1px solid var(--border);box-shadow:10px 0 28px rgba(0,0,0,.06);transform:translateX(-100%);transition:transform .22s ease;z-index:50;display:flex;flex-direction:column;}
+    .sidebar.open{transform:translateX(0);}
+    .open-backdrop{display:block;}
+    .sidebar-header{padding:18px;border-bottom:1px solid var(--border);display:flex;align-items:center;gap:12px;background:linear-gradient(0deg,#fff 0%,#fff 45%,var(--accent-weak) 45%,var(--accent-weak) 100%);}
+    .sidebar-header img{height:38px;}
+    .sidebar-header .brand{font-weight:800;font-size:16px;letter-spacing:.3px;}
+    .cat-list{padding:12px;overflow:auto;}
+    .cat-list a{display:block;padding:12px 14px;margin:6px 0;text-decoration:none;color:#111;border:1px solid var(--border);border-radius:12px;background:#fff;transition:background .15s ease,border-color .15s ease,color .15s ease;font-weight:600;}
+    .cat-list a:hover{background:var(--accent-weak);border-color:#ffd9d6;}
+    .cat-list a.active{background:var(--accent);color:#fff;border-color:var(--accent);}
+    .footer{border-top:1px solid var(--border);padding:26px 20px;text-align:center;color:var(--muted);}
+    @media(min-width:1100px){
+      .sidebar{transform:translateX(0);position:sticky;top:0;height:100vh;}
+      .sidebar-backdrop{display:none!important;}
+      body{display:grid;grid-template-columns:340px 1fr;}
+      header{grid-column:1/-1;}
+      main{padding-left:24px;}
+      .hamburger{display:none;}
     }
   </style>
 </head>
 <body>
-  <!-- Sidebar -->
   <div class="sidebar-backdrop" id="sidebarBackdrop"></div>
-  <aside class="sidebar" id="sidebar" aria-hidden="true">
+  <aside class="sidebar" id="sidebar">
     <div class="sidebar-header">
       <img src="assets/logo.png" alt="Logo" onerror="this.style.display='none'">
       <div class="brand">Sajado – Kategorien</div>
     </div>
-    <nav class="cat-list" id="catList" aria-label="Kategorien">
+    <nav class="cat-list" id="catList">
       <a href="#vorspeisenappetizers">Vorspeisen/Appetizers</a>
       <a href="#nigiri-sushi">Nigiri-Sushi</a>
       <a href="#single-luxury-plates">Single & Luxury Plates</a>
@@ -151,22 +125,14 @@
     </nav>
   </aside>
 
-  <!-- Header -->
   <header>
     <div class="container">
-      <div class="hamburger" id="hamburger" aria-label="Menü öffnen" aria-controls="sidebar" aria-expanded="false">
-        <div class="bar"></div><div class="bar"></div><div class="bar"></div>
-      </div>
-      <div class="logo">
-        <img src="assets/logo.png" alt="Logo" onerror="this.style.display='none'">
-        <h1>Sajado – Speisekarte</h1>
-      </div>
+      <div class="hamburger" id="hamburger"><div class="bar"></div><div class="bar"></div><div class="bar"></div></div>
+      <div class="logo"><img src="assets/logo.png" alt="Logo"><h1>Sajado – Speisekarte</h1></div>
     </div>
   </header>
 
-  <!-- Content -->
   <main>
-    <!-- Sektionen (ohne Captions) -->
     <section id="vorspeisenappetizers"><h2>Vorspeisen/Appetizers</h2><div class="grid" data-category="vorspeisenappetizers"></div></section>
     <section id="nigiri-sushi"><h2>Nigiri-Sushi</h2><div class="grid" data-category="nigiri-sushi"></div></section>
     <section id="single-luxury-plates"><h2>Single & Luxury Plates</h2><div class="grid" data-category="single-luxury-plates"></div></section>
@@ -187,7 +153,6 @@
   <div class="footer">© <span id="year"></span> — Alle Rechte vorbehalten.</div>
 
   <script>
-    // Kategorien exakt nach deinen Ordnernamen (mit 'vorspeisenappetizers')
     const CATEGORIES = [
       "vorspeisenappetizers","nigiri-sushi","single-luxury-plates","signature-rolls","sashimi",
       "hot-rolls-sushi-burger","classic-rolls","signature-dishes","wok","spicy-korean",
@@ -195,71 +160,46 @@
       "beilagen-saucenside-dishes-sauces","dessert"
     ];
 
-    // Manifest-Lader (image/<slug>/manifest.json)
     async function loadManifest(slug){
-      const url = `image/${slug}/manifest.json`;
+      const url=`image/${slug}/manifest.json`;
       try{
-        const res = await fetch(url, { cache: "no-store" });
-        if(!res.ok) return null;
-        const data = await res.json();
-        return Array.isArray(data.images) ? data.images : null;
-      }catch{ return null; }
+        const r=await fetch(url,{cache:"no-store"});
+        if(!r.ok)return null;
+        const d=await r.json();
+        return Array.isArray(d.images)?d.images:null;
+      }catch{return null;}
     }
 
-    // Bildkarte ohne Caption/Lightbox
-    function addCard(grid, src){
-      const card = document.createElement("div");
-      card.className = "card";
-      const img = document.createElement("img");
-      img.loading = "lazy";
-      img.decoding = "async";
-      img.src = src;
-      img.alt = "";
-      card.appendChild(img);
-      grid.appendChild(card);
-    }
-
-    // Aktiven Link in Sidebar beim Scroll markieren (schöner UX)
-    function observeSections(){
-      const items = Array.from(document.querySelectorAll(".cat-list a"));
-      const map = new Map(items.map(a => [a.getAttribute("href").slice(1), a]));
-      const io = new IntersectionObserver((entries) => {
-        entries.forEach(e => {
-          if(e.isIntersecting){
-            items.forEach(i => i.classList.remove("active"));
-            const a = map.get(e.target.id);
-            if(a) a.classList.add("active");
-          }
-        });
-      }, { rootMargin: "-40% 0px -55% 0px", threshold: 0 });
-      document.querySelectorAll("main > section").forEach(sec => io.observe(sec));
+    function addCard(grid,src){
+      const c=document.createElement("div");
+      c.className="card";
+      const img=document.createElement("img");
+      img.loading="lazy";
+      img.decoding="async";
+      img.src=src;
+      img.alt="";
+      c.appendChild(img);
+      grid.appendChild(c);
     }
 
     async function init(){
-      document.getElementById("year").textContent = new Date().getFullYear();
-
+      document.getElementById("year").textContent=new Date().getFullYear();
       for(const slug of CATEGORIES){
-        const grid = document.querySelector(`.grid[data-category="${slug}"]`);
-        const files = await loadManifest(slug);
-        if(!files || !files.length){
-          grid.innerHTML = '<div class="empty">Keine Bilder gefunden.</div>';
-          continue;
-        }
-        for(const f of files){
-          addCard(grid, `image/${slug}/${f}`);
-        }
+        const grid=document.querySelector(`.grid[data-category="${slug}"]`);
+        const files=await loadManifest(slug);
+        if(!files||!files.length){grid.innerHTML='<div class="empty">Keine Bilder gefunden.</div>';continue;}
+        for(const f of files)addCard(grid,`image/${slug}/${f}`);
       }
-      observeSections();
     }
 
-    // Sidebar Toggle
-    const sidebar = document.getElementById('sidebar');
-    const backdrop = document.getElementById('sidebarBackdrop');
-    const burger = document.getElementById('hamburger');
-    function openSidebar(){ sidebar.classList.add('open'); backdrop.classList.add('open-backdrop'); burger.setAttribute('aria-expanded','true'); }
-    function closeSidebar(){ sidebar.classList.remove('open'); backdrop.classList.remove('open-backdrop'); burger.setAttribute('aria-expanded','false'); }
-    burger && burger.addEventListener('click', ()=> sidebar.classList.contains('open') ? closeSidebar() : openSidebar());
-    backdrop && backdrop.addEventListener('click', closeSidebar);
+    // Sidebar logic
+    const sidebar=document.getElementById('sidebar');
+    const backdrop=document.getElementById('sidebarBackdrop');
+    const burger=document.getElementById('hamburger');
+    function openSidebar(){sidebar.classList.add('open');backdrop.classList.add('open-backdrop');}
+    function closeSidebar(){sidebar.classList.remove('open');backdrop.classList.remove('open-backdrop');}
+    burger&&burger.addEventListener('click',()=>sidebar.classList.contains('open')?closeSidebar():openSidebar());
+    backdrop&&backdrop.addEventListener('click',closeSidebar);
 
     init();
   </script>
