--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
       <div class="logo">
         <img src="assets/logo.png" alt="Logo">
-        <h1>Sajado 1030 & 1070</h1>
+        <h1>Sajado 1030 &amp; 1070</h1>
       </div>
     </div>
   </header>
