--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sajado – Speisekarte</title>
+  <title>Sajado 1030 &amp; 1070</title>
   <style>
     :root{
       --bg:#ffffff; --text:#111; --muted:#6b7280; --border:#e5e7eb;
