--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+<!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sajado 1030 &amp; 1070</title>
+  <title>Sajado – Speisekarte</title>
   <style>
     :root{
       --bg:#ffffff; --text:#111; --muted:#6b7280; --border:#e5e7eb;
       --card:#fff; --shadow:0 6px 22px rgba(0,0,0,.08);
       --radius:18px; --gap:16px; --container:1200px;
       --accent:#b3261e; --accent-weak:#fff1f0;
-      --sidebar-w:330px;
+      --sidebar-w:330px; --hdr-h:64px; /* mobile header */
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
@@ -17,52 +18,95 @@
       font-family:ui-sans-serif,-apple-system,Segoe UI,Roboto,Helvetica,Arial;line-height:1.5}
 
     /* Header */
-    header{position:sticky;top:0;z-index:20;background:var(--bg);border-bottom:1px solid var(--border)}
-    .container{max-width:var(--container);margin:0 auto;padding:10px 14px;display:flex;align-items:center;gap:12px}
+    header{
+      position:sticky; top:0; z-index:20; background:var(--bg);
+      border-bottom:1px solid var(--border);
+      transition:transform .28s ease, box-shadow .28s ease;
+      will-change: transform;
+      height: var(--hdr-h);
+      display:flex; align-items:center;
+    }
+    /* Mobile auto-hide state */
+    header.is-hidden{ transform: translateY(calc(-1 * var(--hdr-h))); box-shadow:none; }
+
+    .container{max-width:var(--container);margin:0 auto;padding:8px 14px;display:flex;align-items:center;gap:12px}
     .logo{display:flex;align-items:center;gap:12px}
-    .logo img{height:56px;width:auto}
-    @media (min-width:1100px){ .logo img{height:48px} }
+    .logo img{height:64px;width:auto; transition: transform .2s ease}
+    .logo img:active{ transform: scale(.98) }
+    @media (min-width:1100px){ .logo img{height:52px} }
     .logo h1{font-size:clamp(16px,2vw,20px);margin:0;font-weight:800;letter-spacing:.2px}
-    .hamburger{width:40px;height:28px;display:flex;flex-direction:column;justify-content:space-between;cursor:pointer}
-    .bar{height:3px;border-radius:3px;background:#111}
+
+    /* Fancy hamburger */
+    .hamburger{
+      width:44px;height:44px;display:grid;place-items:center;cursor:pointer; border-radius:12px;
+      transition: background .2s ease, transform .2s ease; user-select:none; -webkit-tap-highlight-color:transparent;
+    }
+    .hamburger:hover{ background:#f7f7f7 }
+    .ham-lines{ width:26px; height:18px; position:relative; }
+    .ham-lines span{
+      position:absolute; left:0; right:0; height:3px; background:#111; border-radius:3px; transition: transform .28s ease, opacity .2s ease, top .28s ease;
+    }
+    .ham-lines span:nth-child(1){ top:0 }
+    .ham-lines span:nth-child(2){ top:7.5px }
+    .ham-lines span:nth-child(3){ top:15px }
+    /* morph to X when sidebar open (mobile) */
+    .sidebar.open ~ header .ham-lines span:nth-child(1){ top:7.5px; transform: rotate(45deg) }
+    .sidebar.open ~ header .ham-lines span:nth-child(2){ opacity:0 }
+    .sidebar.open ~ header .ham-lines span:nth-child(3){ top:7.5px; transform: rotate(-45deg) }
 
     main{max-width:var(--container);margin:0 auto;padding:16px}
     section{padding:24px 0;scroll-margin-top:86px}
     h2{margin:0 0 12px;font-size:clamp(18px,2.2vw,24px);font-weight:800;letter-spacing:.2px}
 
-    /* Grid mit Bildern */
+    /* Grid + Bilder (vollständig anzeigen) */
     .grid{display:grid;gap:var(--gap);grid-template-columns:repeat(auto-fill,minmax(200px,1fr));align-items:start}
     @media (min-width:620px){ .grid{grid-template-columns:repeat(auto-fill,minmax(240px,1fr))} }
     .card{
       background:var(--card); border:2px solid #f1f1f1; border-radius:var(--radius);
       overflow:hidden; box-shadow:var(--shadow);
-      transition:transform .15s ease,box-shadow .15s ease,border-color .15s ease;
+      transition:transform .18s ease,box-shadow .18s ease,border-color .18s ease;
       display:flex; align-items:center; justify-content:center; padding:10px;
     }
-    .card:hover{transform:translateY(-2px); border-color:var(--accent-weak); box-shadow:0 10px 26px rgba(0,0,0,.1)}
-    .card img{display:block; width:100%; height:auto; max-height:420px; object-fit:contain; background:#fff; border-radius:12px}
-    @media (min-width:900px){ .card img{max-height:500px} }
-    .empty{color:var(--muted); background:#fafafa; border:1px dashed var(--border); border-radius:12px; padding:14px; text-align:center; grid-column:1/-1}
+    .card:hover{ transform:translateY(-2px); border-color:var(--accent-weak); box-shadow:0 10px 26px rgba(0,0,0,.1) }
+    .card img{ display:block; width:100%; height:auto; max-height:420px; object-fit:contain; background:#fff; border-radius:12px }
+    @media (min-width:900px){ .card img{ max-height:500px } }
+    .empty{ color:var(--muted); background:#fafafa; border:1px dashed var(--border); border-radius:12px; padding:14px; text-align:center; grid-column:1/-1 }
 
-    /* Sidebar – Mobile: Overlay */
-    .sidebar-backdrop{position:fixed;inset:0;background:rgba(0,0,0,.35);display:none;z-index:30}
-    .sidebar{position:fixed;inset:0 auto 0 0;width:var(--sidebar-w);max-width:88vw;background:#fff;border-right:1px solid var(--border);
-      box-shadow:10px 0 28px rgba(0,0,0,.06);transform:translateX(-100%);transition:transform .22s ease;z-index:40;display:flex;flex-direction:column}
-    .sidebar.open{transform:translateX(0)}
-    .open-backdrop{display:block}
-    .sidebar-header{padding:16px;border-bottom:1px solid var(--border);display:flex;align-items:center;gap:12px;
-      background:linear-gradient(0deg,#fff 0%,#fff 45%,var(--accent-weak) 45%,var(--accent-weak) 100%)}
-    .sidebar-header img{height:38px}
-    .sidebar-header .brand{font-weight:800;font-size:16px;letter-spacing:.3px}
-    .cat-list{padding:10px;overflow:auto}
-    .cat-list a{display:block;padding:14px 14px;margin:6px 0;text-decoration:none;color:#111;border:1px solid var(--border);
-      border-radius:12px;background:#fff;transition:background .15s ease,border-color .15s ease,color .15s ease;font-weight:600}
-    .cat-list a:hover{background:var(--accent-weak);border-color:#ffd9d6}
-    .cat-list a.active{background:var(--accent);color:#fff;border-color:var(--accent)}
+    /* Sidebar – Mobile Overlay */
+    .sidebar-backdrop{ position:fixed; inset:0; background:rgba(0,0,0,.35); display:none; z-index:30; opacity:0; transition: opacity .22s ease }
+    .open-backdrop{ display:block; opacity:1 }
+    .sidebar{
+      position:fixed; inset:0 auto 0 0; width:var(--sidebar-w); max-width:88vw;
+      background:#fff; border-right:1px solid var(--border);
+      transform:translateX(-100%); transition:transform .28s cubic-bezier(.22,.61,.36,1), box-shadow .28s ease;
+      z-index:40; display:flex; flex-direction:column; box-shadow:10px 0 28px rgba(0,0,0,.06);
+    }
+    .sidebar.open{ transform:translateX(0) }
+    .sidebar-header{ padding:16px; border-bottom:1px solid var(--border); display:flex; align-items:center; gap:12px;
+      background:linear-gradient(0deg,#fff 0%,#fff 45%,var(--accent-weak) 45%,var(--accent-weak) 100%) }
+    .sidebar-header img{ height:40px }
+    .sidebar-header .brand{ font-weight:800; font-size:16px; letter-spacing:.3px }
+    .cat-list{ padding:10px; overflow:auto }
+    .cat-list a{
+      display:block; padding:14px 14px; margin:8px 0; text-decoration:none; color:#111; border:1px solid var(--border);
+      border-radius:12px; background:#fff; font-weight:600;
+      transform: translateX(-6px); opacity: 0; animation: itemIn .35s ease forwards;
+    }
+    /* Stagger Effekt */
+    .cat-list a:nth-child(1){ animation-delay:.02s } .cat-list a:nth-child(2){ animation-delay:.04s }
+    .cat-list a:nth-child(3){ animation-delay:.06s } .cat-list a:nth-child(4){ animation-delay:.08s }
+    .cat-list a:nth-child(5){ animation-delay:.10s } .cat-list a:nth-child(6){ animation-delay:.12s }
+    .cat-list a:nth-child(7){ animation-delay:.14s } .cat-list a:nth-child(8){ animation-delay:.16s }
+    .cat-list a:nth-child(9){ animation-delay:.18s } .cat-list a:nth-child(10){ animation-delay:.20s }
+    .cat-list a:nth-child(11){ animation-delay:.22s } .cat-list a:nth-child(12){ animation-delay:.24s }
+    .cat-list a:hover{ background:var(--accent-weak); border-color:#ffd9d6 }
+    .cat-list a.active{ background:var(--accent); color:#fff; border-color:var(--accent) }
 
-    .footer{border-top:1px solid var(--border);padding:22px 16px;text-align:center;color:var(--muted)}
+    @keyframes itemIn{ to{ transform:translateX(0); opacity:1 } }
 
-    /* Desktop-Layout: echte 2-Spalten-Grid-Areas (keine Overlay-Sidebar) */
+    .footer{ border-top:1px solid var(--border); padding:22px 16px; text-align:center; color:var(--muted) }
+
+    /* Desktop: echtes 2-Spalten Grid, keine Overlay-Sidebar */
     @media (min-width:1100px){
       body{
         display:grid;
@@ -73,17 +117,16 @@
           "side main";
         align-items:start;
       }
-      .sidebar{
-        grid-area: side;
-        position: sticky; top: 0; height: 100vh;
-        transform:none; /* ganz wichtig: keine Overlay-Transformation auf Desktop */
-        z-index: 10;    /* unter dem Header, über dem Hintergrund */
-        box-shadow:none; border-right:1px solid var(--border);
-      }
-      header{ grid-area: header; position:sticky; top:0; z-index: 15; }
-      main{ grid-area: main; max-width: unset; padding: 18px 24px; }
-      .sidebar-backdrop{ display:none !important; }
-      .hamburger{ display:none; }
+      .sidebar{ grid-area: side; position: sticky; top: 0; height: 100vh; transform:none; box-shadow:none }
+      header{ grid-area: header; position:sticky; top:0 }
+      main{ grid-area: main; max-width: unset; padding: 18px 24px }
+      .sidebar-backdrop{ display:none !important }
+      .hamburger{ display:none }
+    }
+
+    /* Barrierefreiheit */
+    @media (prefers-reduced-motion: reduce){
+      *{ animation-duration: .001ms !important; animation-iteration-count: 1 !important; transition-duration: 0ms !important; scroll-behavior: auto !important }
     }
   </style>
 </head>
@@ -93,7 +136,7 @@
   <aside class="sidebar" id="sidebar">
     <div class="sidebar-header">
       <img src="assets/logo.png" alt="Logo" onerror="this.style.display='none'">
-      <div class="brand">Kategorien/Categories</div>
+      <div class="brand">Sajado – Kategorien</div>
     </div>
     <nav class="cat-list" id="catList">
       <a href="#vorspeisenappetizers">Vorspeisen/Appetizers</a>
@@ -115,14 +158,14 @@
   </aside>
 
   <!-- Header -->
-  <header>
+  <header id="siteHeader">
     <div class="container">
       <div class="hamburger" id="hamburger" aria-label="Menü öffnen" aria-controls="sidebar" aria-expanded="false">
-        <div class="bar"></div><div class="bar"></div><div class="bar"></div>
+        <div class="ham-lines"><span></span><span></span><span></span></div>
       </div>
       <div class="logo">
         <img src="assets/logo.png" alt="Logo">
-        <h1>Sajado 1030 &amp; 1070</h1>
+        <h1>Sajado – Speisekarte</h1>
       </div>
     </div>
   </header>
@@ -145,7 +188,7 @@
     <section id="dessert"><h2>Dessert</h2><div class="grid" data-category="dessert"></div></section>
   </main>
 
-  <div class="footer"><span id="year"></span> — @sajado1030.1070</div>
+  <div class="footer">© <span id="year"></span> — Alle Rechte vorbehalten.</div>
 
   <script>
     // Kategorien (ohne Beilagen & Saucen)
@@ -175,6 +218,7 @@
       grid.appendChild(c);
     }
 
+    // Sidebar Links: smooth scroll + close on mobile + active state
     function setupSidebarLinks(){
       var links = document.querySelectorAll(".cat-list a");
       for (var i=0;i<links.length;i++){
@@ -187,7 +231,7 @@
               var y = target.getBoundingClientRect().top + window.pageYOffset - 80;
               window.scrollTo({ top: y, behavior: "smooth" });
             }
-            closeSidebar(); // auf Mobil schließen
+            closeSidebar();
             for (var j=0;j<links.length;j++) links[j].classList.remove("active");
             a.classList.add("active");
           });
@@ -195,6 +239,7 @@
       }
     }
 
+    // Active-Link beim Scrollen
     function observeSections(){
       if (!("IntersectionObserver" in window)) return;
       var items = Array.prototype.slice.call(document.querySelectorAll(".cat-list a"));
@@ -213,10 +258,35 @@
       for (var k=0;k<secs.length;k++) io.observe(secs[k]);
     }
 
+    // Mobile header auto-hide (nur unter 1100px)
+    function setupHeaderAutoHide(){
+      var header = document.getElementById('siteHeader');
+      var lastY = window.pageYOffset || document.documentElement.scrollTop;
+      var ticking = false;
+
+      function onScroll(){
+        var y = window.pageYOffset || document.documentElement.scrollTop;
+        if (ticking) return;
+        window.requestAnimationFrame(function(){
+          var isDesktop = window.matchMedia("(min-width:1100px)").matches;
+          if (!isDesktop){
+            if (y > lastY && y > 30){ header.classList.add("is-hidden"); }
+            else { header.classList.remove("is-hidden"); }
+          } else {
+            header.classList.remove("is-hidden");
+          }
+          lastY = y;
+          ticking = false;
+        });
+        ticking = true;
+      }
+      window.addEventListener('scroll', onScroll, { passive:true });
+    }
+
     function init(){
       document.getElementById("year").textContent = new Date().getFullYear();
       (function fillAll(idx){
-        if (idx >= CATEGORIES.length) { setupSidebarLinks(); observeSections(); return; }
+        if (idx >= CATEGORIES.length) { setupSidebarLinks(); observeSections(); setupHeaderAutoHide(); return; }
         var slug = CATEGORIES[idx];
         var grid = document.querySelector('.grid[data-category="'+slug+'"]');
         loadManifest(slug).then(function(files){
